<?xml version="1.0"?>
<package format="2">
  <name>autobahn-cpp</name>
  <version>20.8.1</version>
  <description>
    WAMP for C++ on Boost/ASIO.
  </description>

  <author email="jacob.seibert@enway.ai">Jacob Seibert</author>
  <maintainer email="jacob.seibert@enway.ai">Jacob Seibert</maintainer>
  <license>Proprietary. Predecessor license: Boost Software License - Version 1.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- AutobahnC++ dependencies -->
  <build_depend>bzip2</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libwebsocketpp-dev</build_depend>
  <build_depend>msgpack</build_depend>

</package>

